--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
 }
+.navbar-right li a i:hover, .navbar-right li a:hover{
+    color: white;
+}
 @media (min-width: 768px){
 .navbar-nav > li > a {
     padding-top: 20px;
@@ -319,6 +322,11 @@ a, input[type="submit"] {
 .message-area.normal-bg .text-purple-dark, .message-area.normal-bg .text-other-color2 {
     font-weight: 300;
 }
+.cliens-logo {
+    display: inline-block;
+    margin-right: 15%;
+}
+
 .cliens-logo img{
     width:200px;
     height: 150px;
@@ -456,7 +464,7 @@ a, input[type="submit"] {
     padding-right: 15px;
 }
 #footer .social-menu li a [class*="fa"] {
-    color: #747e94;
+    /*color: #747e94;*/
     font-size: 25px;
     text-align: center;
     min-width: 30px;
